# eth-beacons-indoor

./: .gitignore  Cargo.toml  README.md
src/: beacons.gen.rs  buildings.gen.rs  generated.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: api.rs  main.rs
