[package]
name = "eth-beacons-indoor"
description = "Metadata of beacons located inside the buildings of ETH Zurich."
version = "0.0.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/eth-polymaps/eth-beacons"

[features]
AGS = []
BEA = []
BSS = []
CAB = []
CHN = []
CLA = []
CLD = []
CLP = []
CLT = []
CLV = []
CLW = []
CNB = []
DFA = []
DFB = []
ETA = []
ETF = []
ETL = []
ETZ = []
FRB = []
FRN = []
GLC = []
HCI = []
HCP = []
HDB = []
HEK = []
HEZ = []
HG = []
HGP = []
HIA = []
HIB = []
HIF = []
HIG = []
HIL = []
HIT = []
HPF = []
HPG = []
HPH = []
HPI = []
HPK = []
HPL = []
HPM = []
HPP = []
HPR = []
HPS = []
HPT = []
HPV = []
HPZ = []
HRG = []
HXE = []
HZA = []
IFW = []
LCA = []
LEE = []
LEO = []
LFH = []
LFO = []
LFV = []
LFW = []
ML = []
MLY = []
MM = []
NO = []
NW = []
OAT = []
OCT = []
ONA = []
PFA = []
RZ = []
RZY = []
SLA = []
SON = []
STB = []
STC = []
STW = []
TAN = []
UNO = []
WEH = []
WES = []
WET = []
WEV = []
WPW = []
WWA = []
ZUE = []

[workspace]
members = ["xtask"]

